# gscli

./: README.md  pyproject.toml
src/gscli/: __init__.py  __main__.py  cli.py  gradescope.py  gscli.py  utils.py
tests/: conftest.py  test_submit.py
tests/uploads/handwritten/: sys hw 1.md
tests/uploads/off_by_1/: calculator.py
