[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gscli"
version = "0.1.0"
description = "A command-line tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Nicolas Winsten", email = "nicolasd.winsten@gmail.com"}
]
dependencies = [
    "typer>=0.9.0",
    "typing-extensions>=4.0.0",
    "requests (>=2.32.5,<3.0.0)",
    "gradescopeapi (>=1.6.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "cryptography>=41.0.0",
    "platformdirs (>=4.5.1,<5.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "questionary>=1.10.0",
    "rich (>=14.2.0,<15.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
gscli = "gscli.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
